# dohboy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dns2doh/: CMakeLists.txt  deps.json
dns2doh/include/: dnspacket.h  dnspacketdata.h  doh.h  settings.h  worker.h
dns2doh/src/: dnspacket.cc  doh.cc  main.cc  settings.cc  worker.cc
dohboy/: CMakeLists.txt  deps.json
dohboy/include/: doh.h  local.h  settings.h  worker.h
dohboy/src/: doh.cc  local.cc  settings.cc  worker.cc
packaging/: buildpackage.sh  postInst.sh  preInst.sh  preRm.sh
packaging/service/: dns2doh.service  dohboy.conf  dohboy.service
